open in new tab

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,10 @@
     <a href="{{ "/" | relative_url }}" class="site-title">{{ site.title }}</a>
   </div>
   <div class="topbar-right">
-    <a href="mailto:jon.wen@mail.utoronto.ca"><i class="fa-solid fa-envelope"></i></a>
-    <a href="https://www.linkedin.com/in/jonathan-yk-wen/"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/JonathanWaan"><i class="fab fa-github"></i></a>
-    <a href="{{ "/assets/Jonathan_Resume.pdf" | relative_url }}"><i class="fa-solid fa-file-pdf"></i></a>
+    <a href="mailto:jon.wen@mail.utoronto.ca" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+    <a href="https://www.linkedin.com/in/jonathan-yk-wen/" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/JonathanWaan" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="{{ "/assets/Jonathan_Resume.pdf" | relative_url }}" target="_blank"><i class="fa-solid fa-file-pdf"></i></a>
 
     <!-- Home tab -->
     <a href="{{ "/" | relative_url }}" {% if page.url == "/" %}class="active"{% endif %}>Home</a>
