--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,16 +14,21 @@
     <a href="{{ "/" | relative_url }}" class="site-title">{{ site.title }}</a>
   </div>
   <div class="topbar-right">
-    <a href="mailto:jon.wen@mail.utoronto.ca" target="_blank"><i class="fa-solid fa-envelope"></i></a>
-    <a href="https://www.linkedin.com/in/jonathan-yk-wen/" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/JonathanWaan" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="{{ "/assets/Jonathan_Resume.pdf" | relative_url }}" target="_blank"><i class="fa-solid fa-file-pdf"></i></a>
 
     <!-- Home tab -->
     <a href="{{ "/" | relative_url }}" {% if page.url == "/" %}class="active"{% endif %}>Home</a>
 
     <!-- Background tab -->
     <a href="{{ "/background/" | relative_url }}" {% if page.url contains "background" %}class="active"{% endif %}>Background</a>
+
+    <!-- Contact icons -->
+    <a href="mailto:jon.wen@mail.utoronto.ca" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+    <a href="https://www.linkedin.com/in/jonathan-yk-wen/" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/JonathanWaan" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="{{ "/assets/Jonathan_Resume.pdf" | relative_url }}" target="_blank"><i class="fa-solid fa-file-pdf"></i></a>
+
+    <!-- Avatar on the far right -->
+    <img src="{{ "/assets/avatar.jpg" | relative_url }}" alt="Avatar" class="avatar">
   </div>
 </header>
 
