--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,10 @@
     <a href="https://github.com/JonathanWaan" target="_blank"><i class="fab fa-github"></i></a>
     <a href="{{ "/assets/Jonathan_Resume.pdf" | relative_url }}" target="_blank"><i class="fa-solid fa-file-pdf"></i></a>
 
-    <!-- Avatar on the far right -->
+    <!-- Avatar -->
     <img src="{{ "/assets/avatar.jpg" | relative_url }}" alt="Avatar" class="avatar">
   </div>
 </header>
-
 <main>
   {{ content }}
 </main>
